# projecteweb-1

./: README.md  pyproject.toml
eazytapa/: manage.py
eazytapa/eazytapa/: asgi.py  settings.py  urls.py  wsgi.py
webclient/: apiclient.py  webscrape.py
